Add btn Go to login page to redirect users and display logout only when user is connected

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,15 +5,17 @@
     <title>Summary | GUDLFT Registration</title>
 </head>
 <body>
-        <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
-
     {% with messages = get_flashed_messages()%}
+    {% if not messages %}
+    <h2>Welcome, {{club['email']}} </h2><a href="{{url_for('logout')}}">Logout</a>
+    {% endif %}
     {% if messages %}
         <ul>
        {% for message in messages %}
             <li>{{message}}</li>
         {% endfor %}
        </ul>
+       <button onclick="redirectToRoot()">Go to login page</button>
     {% else %}
     Points available: {{club['points']}}
     <h3>Competitions:</h3>
@@ -32,6 +34,10 @@
     </ul>
     {% endif%}
     {%endwith%}
-
+    <script>
+        function redirectToRoot() {
+            window.location.href = "/";
+        }
+    </script>
 </body>
 </html>
