--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -19,6 +19,18 @@
     {% else %}
     <br />
     Points available: {{club['points']}}
+    <br />
+    <br />
+    <form action="{{ url_for('clubsPoints', club=club['name']) }}" method="post">
+        <input type="hidden" name="club" value="{{ club['name'] }}">
+        <button type="submit">Display club report</button>
+    </form>
+    {% if club_name %}
+    <h3>Club Points</h3>
+    <p>Club Name: {{ club_name }}</p>
+    <p>Points: {{ club_points }} </p>
+    {% endif %}
+    <br />
     <h3>Competitions:</h3>
     <ul>
         {% for comp in competitions%}
