--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,10 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+    <h2>Display report of all clubs</h2>
+
+    <br />
+    <a href="{{url_for('clubsPoints')}}">Display list of all clubs</a>
+    <br />
 </body>
 </html>
